# drone-predictor

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: classes.yaml  priors.yaml
data/public/: SOURCES.md
docs/: GOLDEN_SET.md  REAL_AUDIO.md  SPEC.md
scripts/: ingest_blackbox.py  ingest_dji_log.py  ingest_uiuc.py  make_demo_sample.py  make_synthetic.py  make_templates.py  validate_real_audio.py
src/augur/: __init__.py  api.py  cli.py  config.py  data_manifest.py  eval.py  pipeline.py  prop_ingest.py  report.py  types.py
src/augur/audio/: hover.py  rpm.py  spectral.py
src/augur/fusion/: calibration.py  observations.py  posterior.py
src/augur/image/: extract.py  geometry.py
src/augur/physics/: core.py  drag.py  prop_db.py  simulator.py
src/augur/video/: maneuvers.py  track.py
tests/ablation/: test_monotonicity.py
tests/calibration/: test_conformal.py  test_eval.py
tests/integration/: test_pipeline.py
tests/property/: test_round_trip_properties.py
tests/unit/: test_api.py  test_audio_rpm.py  test_drag.py  test_image.py  test_manifest.py  test_physics_core.py  test_prop_ingest.py  test_simulator.py  test_video_maneuvers.py  test_video_track.py
web/: README.md  index.html  package-lock.json  package.json
web/public/templates/: templates.json
web/src/: App.jsx  api.js  styles.css
web/src/components/: Report.jsx  VariableBar.jsx
web/src/lib/: format.js
