[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "augur"
version = "0.1.0"
description = "Multimodal drone property inference — calibrated distributions from sound, spec, image, video"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Brody Kretz" }]
dependencies = [
    "numpy>=1.26,<3.0",
    "scipy>=1.11,<2.0",
    "pandas>=2.1,<3.0",
    "pyarrow>=14.0",
    "pydantic>=2.5,<3.0",
    "pyyaml>=6.0",
    "typer>=0.9",
]

[project.optional-dependencies]
audio = ["librosa>=0.10"]
vision = ["opencv-python>=4.8", "norfair>=2.2", "anthropic>=0.40"]
serve = ["fastapi>=0.110", "uvicorn>=0.27"]
viz = ["matplotlib>=3.8"]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.90",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]

[project.scripts]
augur = "augur.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/augur"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# E501: long lines tolerated. B008: Typer's Option()-in-default is the idiom.
# UP042: (str, Enum) is intentional and 3.11-portable.
ignore = ["E501", "B008", "UP042"]
